--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^1.0.3",
+    "@apollon/iobroker-tools": "^0.1.0",
     "ws": "^6.1.2"
   },
   "devDependencies": {
@@ -29,16 +30,16 @@
     "@types/mocha": "^5.2.5",
     "@types/node": "^10.12.18",
     "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^7.0.3",
+    "@types/sinon": "^7.0.5",
     "@types/sinon-chai": "^3.2.2",
-    "@types/ws": "^6.0.1",
+    "axios": "^0.18.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^5.12.0",
+    "eslint": "^5.12.1",
     "gulp": "^4.0.0",
     "mocha": "^5.2.0",
     "proxyquire": "^2.1.0",
-    "sinon": "^7.2.2",
+    "sinon": "^7.2.3",
     "sinon-chai": "^3.3.0"
   },
   "main": "main.js",
