--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   "dependencies": {
     "@iobroker/adapter-core": "^1.0.3",
     "@apollon/iobroker-tools": "^0.1.0",
-    "ws": "^6.1.2"
+    "ws": "^6.1.2",
+    "mdns-js": "^1.0.3"
   },
   "devDependencies": {
     "@types/chai": "^4.1.7",
