--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
   "main": "main.js",
   "scripts": {
     "test:js": "mocha --opts test/mocha.custom.opts",
-    "test:package": "mocha test/testPackageFiles.js --exit",
+    "test:package": "mocha test/package --exit",
     "test:unit": "mocha test/unit --exit",
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:package && npm run test:unit",
