--- a/package.json
+++ b/package.json
@@ -20,29 +20,30 @@
   },
   "dependencies": {
     "@iobroker/adapter-core": "^1.0.3",
-    "@apollon/iobroker-tools": "^0.1.0",
-    "ws": "^6.1.2",
+    "@apollon/iobroker-tools": "^0.2.0",
+    "ws": "^7.4.1",
     "mdns-js": "^1.0.3"
   },
   "devDependencies": {
-    "@types/chai": "^4.1.7",
-    "@types/chai-as-promised": "^7.1.0",
-    "@types/gulp": "^4.0.5",
-    "@types/mocha": "^5.2.5",
-    "@types/node": "^10.12.18",
+    "@types/chai": "^4.2.14",
+    "@types/chai-as-promised": "^7.1.3",
+    "@types/gulp": "^4.0.7",
+    "@types/mocha": "^8.2.0",
+    "@types/node": "^14.14.14",
     "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^7.0.5",
-    "@types/sinon-chai": "^3.2.2",
-    "axios": "^0.18.0",
+    "@types/sinon": "^9.0.9",
+    "@types/sinon-chai": "^3.2.5",
+    "axios": "^0.21.0",
     "chai": "^4.2.0",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^5.12.1",
-    "gulp": "^4.0.0",
-    "mocha": "^5.2.0",
-    "proxyquire": "^2.1.0",
-    "sinon": "^7.2.4",
-    "sinon-chai": "^3.3.0",
-    "@iobroker/testing": "^1.2.2"
+    "eslint": "^7.15.0",
+    "gulp": "^4.0.2",
+    "mocha": "^8.2.1",
+    "proxyquire": "^2.1.3",
+    "sinon": "^9.2.2",
+    "sinon-chai": "^3.5.0",
+    "@iobroker/testing": "^2.4.0",
+    "@alcalzone/release-script": "^1.8.1"
   },
   "main": "main.js",
   "scripts": {
@@ -52,7 +53,8 @@
     "test:integration": "mocha test/integration --exit",
     "test": "npm run test:package && npm run test:unit",
     "lint": "npm run lint:js",
-    "lint:js": "eslint"
+    "lint:js": "eslint",
+    "release": "release-script"
   },
   "bugs": {
     "url": "https://github.com/Apollon77/ioBroker.siegenia/issues"
