--- a/package.json
+++ b/package.json
@@ -19,31 +19,31 @@
     "url": "https://github.com/Apollon77/ioBroker.siegenia"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.4.0",
+    "@iobroker/adapter-core": "^2.5.0",
     "@apollon/iobroker-tools": "^0.2.0",
-    "ws": "^7.4.6",
+    "ws": "^7.5.2",
     "mdns-js": "^1.0.3"
   },
   "devDependencies": {
-    "@types/chai": "^4.2.18",
+    "@alcalzone/release-script": "^2.2.0",
+    "@iobroker/testing": "^2.4.4",
+    "@types/chai": "^4.2.20",
     "@types/chai-as-promised": "^7.1.4",
-    "@types/gulp": "^4.0.8",
+    "@types/gulp": "^4.0.9",
     "@types/mocha": "^8.2.2",
-    "@types/node": "^15.6.1",
+    "@types/node": "^16.0.0",
     "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^10.0.1",
+    "@types/sinon": "^10.0.2",
     "@types/sinon-chai": "^3.2.5",
     "axios": "^0.21.1",
     "chai": "^4.3.4",
     "chai-as-promised": "^7.1.1",
-    "eslint": "^7.27.0",
+    "eslint": "^7.30.0",
     "gulp": "^4.0.2",
-    "mocha": "^8.4.0",
+    "mocha": "^9.0.2",
     "proxyquire": "^2.1.3",
-    "sinon": "^10.0.0",
-    "sinon-chai": "^3.7.0",
-    "@iobroker/testing": "^2.4.4",
-    "@alcalzone/release-script": "^1.10.0"
+    "sinon": "^11.1.1",
+    "sinon-chai": "^3.7.0"
   },
   "main": "main.js",
   "scripts": {
