--- a/package.json
+++ b/package.json
@@ -19,42 +19,35 @@
     "url": "https://github.com/Apollon77/ioBroker.siegenia"
   },
   "dependencies": {
-    "@iobroker/adapter-core": "^2.5.1",
-    "@apollon/iobroker-tools": "^0.2.0",
-    "ws": "^7.5.2",
+    "@iobroker/adapter-core": "^3.3.2",
+    "@apollon/iobroker-tools": "^0.2.1",
+    "ws": "^8.18.3",
     "mdns-js": "^1.0.3"
   },
   "devDependencies": {
-    "@alcalzone/release-script": "^3.5.9",
-    "@iobroker/testing": "^2.6.0",
-    "@types/chai": "^4.3.1",
-    "@types/chai-as-promised": "^7.1.5",
-    "@types/gulp": "^4.0.9",
-    "@types/mocha": "^9.1.1",
-    "@types/node": "^16.11.11",
-    "@types/proxyquire": "^1.3.28",
-    "@types/sinon": "^10.0.11",
-    "@types/sinon-chai": "^3.2.8",
-    "axios": "^0.27.2",
-    "chai": "^4.3.6",
-    "chai-as-promised": "^7.1.1",
-    "eslint": "^8.16.0",
-    "gulp": "^4.0.2",
-    "mocha": "^9.2.2",
-    "proxyquire": "^2.1.3",
-    "sinon": "^12.0.1",
-    "sinon-chai": "^3.7.0"
+    "@alcalzone/release-script": "^3.8.0",
+    "@alcalzone/release-script-plugin-iobroker": "^3.7.2",
+    "@alcalzone/release-script-plugin-license": "^3.7.0",
+    "@iobroker/adapter-dev": "^1.5.0",
+    "@iobroker/dev-server": "^0.8.0",
+    "@iobroker/testing": "^5.1.1",
+    "@types/node": "^24.7.1",
+    "@types/proxyquire": "^1.3.31",
+    "eslint": "^8.57.1"
   },
   "main": "main.js",
+  "engines": {
+    "node": ">=18"
+  },
   "scripts": {
-    "test:js": "mocha --opts test/mocha.custom.opts",
     "test:package": "mocha test/package --exit",
-    "test:unit": "mocha test/unit --exit",
     "test:integration": "mocha test/integration --exit",
-    "test": "npm run test:package && npm run test:unit",
+    "test": "npm run test:package && npm run test:js && npm run test:integration",
     "lint": "npm run lint:js",
     "lint:js": "eslint",
-    "release": "release-script"
+    "release": "release-script",
+    "translate": "translate-adapter",
+    "dev-server": "dev-server"
   },
   "bugs": {
     "url": "https://github.com/Apollon77/ioBroker.siegenia/issues"
