--- a/.github/workflows/test-and-release.yml
+++ b/.github/workflows/test-and-release.yml
@@ -16,6 +16,14 @@ on:
       - "v?[0-9]+.[0-9]+.[0-9]+-**"
   pull_request: {}
 
+concurrency:
+  group: ${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  id-token: write  # Required for OIDC
+  contents: write
+
 jobs:
   # Performs quick checks before the expensive test runs
   check-and-lint:
@@ -122,8 +130,7 @@ jobs:
 #        run: npm run build
       - name: Publish package to npm
         run: |
-          npm config set //registry.npmjs.org/:_authToken=${{ secrets.NPM_TOKEN }}
-          npm whoami
+          npm install -g npm@latest
           npm publish
 
       - name: Create Github Release
