--- a/package.json
+++ b/package.json
@@ -10,9 +10,7 @@
   "license": "MIT",
   "keywords": [
     "ioBroker",
-    "template",
-    "Smart Home",
-    "home automation"
+    "Siegenia"
   ],
   "repository": {
     "type": "git",
